--- a/style.css
+++ b/style.css
@@ -1,8 +1,9 @@
 *{
     margin: 0;
+    font-family: 'Times New Roman', Times, serif;
 }
 header{
-    background-image: url(img/forest.jpeg);
+    background-image: url(img/Background.jpg);
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
@@ -26,4 +27,46 @@ header{
 }
 .facebook{
     margin: 25px;
+}
+.article{
+    font-size: 11px;
+    font-weight: bolder;
+    color: #fff;
+    margin-bottom: 30px;
+}
+.main-text{
+    font-size: 80px;
+    font-weight:bolder ;
+    color: #fff;
+}
+.main{
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    justify-content: space-around;
+    margin: 15px;
+    margin-left: 176px;
+}
+.secondary-text{
+    font-size: 14px;
+    color: #fff;
+    margin-top: 25px;
+    font-weight: 0.5;
+}
+#info{
+    font-size: 12px;
+    margin-top: 30px;
+    margin-bottom: 80px;
+    font-weight: bolder;
+    width: 274px;
+    height: 80px;
+    padding-top: 30px;
+    padding-bottom: 20px;
+}
+.img_menu{
+    filter: brightness(200%);
+}
+.red{
+    background-color:  #E8594E;
+
 }
