--- a/style.css
+++ b/style.css
@@ -102,7 +102,7 @@ header{
     justify-content: space-between;
     margin-left: 176px;
     margin-right: 110px;
-    margin-bottom: 150px;
+    margin-bottom: 130px;
 }
 .card{
     margin: 18px;
@@ -110,8 +110,48 @@ header{
 .card-img{
     filter: brightness(90%);
 }
-.bottom-text{
-    position: absolute;
-    bottom: 8px;
-    left: 16px;
+#feature{
+    font-size: 11px;
+    margin-top: 600px;
+    font-weight: bolder;
+    width: 132px;
+    height: 48px;
+    padding-top: 15px;
+    padding-bottom: 10px;
+}
+section{
+    background-image: url(img/Mask\ Group\ \(2\).jpg);
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+}
+.fly{
+    font-size: 64px;
+    color: #fff;
+    font-weight: 560;
+}
+.featured{
+    margin-left: 176px;
+    align-items: end;
+}
+.text-after{
+    color: #fff;
+    font-size: 14px;
+}
+.blue{
+   background-color: #73AFBA;
+   color: #fff;
+   font-size: 12px;
+   font-weight: bolder;
+   width: 266px;
+   height: 80px;
+   padding-top: 28px;
+   padding-bottom: 20px;
+   letter-spacing: 0.6;
+   margin-bottom: 100px;
+   margin-top: 10px;
+}
+.sec-2{
+    display: flex;
+    flex-direction: row;
 }
